:Correct self-links overlap of header on small displays
style.css: #self-links will no longer overlap header at any point.

--- a/style.css
+++ b/style.css
@@ -420,8 +420,16 @@ body.article h3 {
   }
 }
 
+/* selflinks start to overlap with heading */
+@media screen and (max-width: 475px) {
+  #selflinks img {
+    max-width: 32px;
+    max-height: 32px;
+  }
+}
+
 /* when things start getting odd from 640px */
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 420px) {
   #menu {
     font-size: 0.8em;
   }
